# dataset-scrapers

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  openml.ipynb  pyproject.toml  requirements.txt
dataset_scrapers/: metadata_analyze.py  task_queue.py
dataset_scrapers/kaggle/: analyze_errors.py  analyze_metadata.py  create_histograms.py  dataset_download.py  delete_errors.py  download_datasets.py  download_metadata.py  enrich_profiles.py  get_stats.py  metadata_download.py
dataset_scrapers/openml/: openml.ipynb
docs/: croissant_extension.md  kaggle.md  statistics.md
mongo_scripts/: mongo_import.py
notebooks/: openml.ipynb
scrapers/: TaskQueue.py  convert_metadata.py  create_histograms.py  dataset_download.py  gittables.py  kaggle.ipynb  kaggle_metadata.py  metadata_analyze.py  metadata_download.py  metadata_download_all.py  metadata_download_keyword.py  openml.ipynb
scripts/: import_openml.py  mongo_import.py  run_mongod.sh  run_mongosh.sh  sanitize_notebook.py
utils/: sanitize_notebooks.py
