[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dataset-scrapers"
dynamic = ["version"]
description = "Tools and scripts for downloading and enriching dataset profile collections."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Lennart Behme", email = "lennart.behme@tu-berlin.de" },
    { name = "Emil Badura", email = "badura@tu-berlin.de" },
]
keywords = ["data discovery", "dataset search", "dataset profiles"]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "cchardet>=2.2.0a2",
    "kaggle>=1.7.3b0",
    "matplotlib>=3.10.0",
    "numpy>=2.3.0",
    "openml>=0.15.1",
    "pandas>=2.2.3",
    "requests>=2.32.3",
    "tqdm>=4.67.1",
]

[project.urls]
Repository = "https://github.com/lbhm/dataset-scrapers"

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pre-commit>=4.1.0",
    "types-requests>=2.32.0.20241016",
]

[tool.hatch.version]
path = "dataset_scrapers/__init__.py"

[tool.ruff]
line-length = 99
target-version = "py311"

[tool.ruff.format]
skip-magic-trailing-comma = false

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "AIR",     # airflow
    "ARG",     # flake8-unused-arguments
    "COM812",  # missing-trailing-comma
    "CPY",     # flake8-copyright
    "D1",      # pydocstyle undocumented-*
    "DJ",      # flake8-django
    "DOC",     # pydoclint
    "EM",      # flake8-errmsg
    "ERA",     # eradicate
    "FBT",     # flake8-boolean-trap
    "FIX",     # flake8-fixme
    "PLR09",   # pylint too-many-*
    "PLR6301", # no-self-use
    "S101",    # assert (needed for pytest)
    "TD",      # flake8-todos
    "TRY003",  # raise-vanilla-args
    "T201",    # print
]
isort.split-on-trailing-comma = false
preview = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
ignore_missing_imports = true
strict = true
enable_error_code = ["ignore-without-code"]
warn_unused_ignores = true
